--- a/style.css
+++ b/style.css
@@ -48,9 +48,11 @@ header{
 .corpo{
     /* margin: 0px 150px; */
     width: 920px;
-    text-align: center;
     background-color: hsl(0, 100%, 100%, 80%);
     margin: auto;
+}
+.titulo{
+    text-align: center;
 }
 
 
@@ -81,6 +83,9 @@ header{
     border: solid 1px red;
 }
 .sob{
-    width: 200px;
-    height: 100px;
+    border: solid 1px red;
+    width: 400px;
+    height: 300px;
+    border-radius: 50%;
+    
 }
