--- a/style.css
+++ b/style.css
@@ -26,7 +26,9 @@ header{
   position: sticky;
   font-family: 'Satisfy', cursive;
 }
-
+#inpage{
+    opacity: 50%;
+}
 .cab:hover{
     color: hsl(0, 100%, 50%, 90%);
     transition: 1s;
@@ -54,11 +56,14 @@ header{
 .titulo{
     text-align: center;
 }
-
+.formulario{
+    text-align: center;
+}
 
 
 #rodape
 {
+    font-size: 1vw;
     border: 1px solid red;
     clear: both;
 }
@@ -73,7 +78,6 @@ header{
     border: 1px solid red;
     width: 450px;
     float: right;
-    background: white;
 }
 /* Sobre nós Helio */
 .contato{
