--- a/style.css
+++ b/style.css
@@ -59,6 +59,17 @@ header {
   text-align: center;
 }
 .formulario {
+  margin-top: -30px;
+  text-align: center;
+}
+
+.hrcontato{
+  width: 620px;
+  margin-left: 150px;
+}
+
+#socialprofile{
+  margin: 20px 0px;
   text-align: center;
 }
 
