--- a/style.css
+++ b/style.css
@@ -59,9 +59,33 @@ header {
 .titulo {
   text-align: center;
 }
-.formulario {
-  margin-top: -30px;
-  text-align: center;
+form {
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
+}
+
+fieldset{
+  margin: 1em 0px;
+}
+
+legend{
+  font-weight: bold;
+}
+
+form div{
+  padding: 0.5em;
+}
+
+label{
+  display: block;
+  cursor: pointer;
+}
+
+input [type="text"]{
+  width: 20em;
+}
+
+.radio{
+  display: flex;
 }
 
 .hrcontato{
